Successfully import Spark

--- a/PysparkPrimer.ipynb
+++ b/PysparkPrimer.ipynb
@@ -2,15 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "802da471",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import findspark\n",
+    "\n",
+    "findspark.init()\n",
+    "\n",
+    "from pyspark import SparkContext, SparkConf\n",
+    "\n",
+    "spark_conf = SparkConf().setAppName(\"YourTest\").setMaster(\"local[*]\")\n",
+    "\n",
+    "sc = SparkContext.getOrCreate(spark_conf)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "97f2663b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<SparkContext master=local[*] appName=YourTest>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "cb053c51",
    "metadata": {},
    "outputs": [],
@@ -21,25 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "b65b2a54",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m nums_rdd = \u001b[43msc\u001b[49m.parallelize(nums)\n\u001b[32m      2\u001b[39m nums_rdd\n",
-      "\u001b[31mNameError\u001b[39m: name 'sc' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "nums_rdd = sc.parallelize(nums)\n",
-    "nums_rdd"
+    "print()"
    ]
   },
   {
